src/test/deca/codegen/valid/test_class_attribut.deca
// Description:
//    tests conditionnelle
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2022

class Vide {
    int i;
}

