src/test/deca/codegen/invalid/test_modulo_zero.deca
// Description:
//      Test la division par zero
//
// Resultat:
//      Ligne 12 : error - division par zero impossible  
// 
// Historique:
//    cree le 20/01/2022

{
    int res = 87 % 0;
}

